[package]
name = "pingap-discovery"
version = "0.11.0"
edition = "2021"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/pingap"
repository = "https://github.com/vicanso/pingap"
keywords = ["pingap", "discovery"]
description = "Discovery for pingap"

[lib]
name = "pingap_discovery"
path = "src/lib.rs"


[dependencies]
async-trait = { workspace = true }
bollard = "0.19.1"
hickory-resolver = { workspace = true }
http = { workspace = true }
pingap-core = { version = "0.11.0", path = "../pingap-core" }
pingora = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
tempfile = "3.16.0"
tokio-test = "0.4.4"
