[package]
name = "pingap-health"
version = "0.11.0"
edition = "2021"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/pingap"
repository = "https://github.com/vicanso/pingap"
keywords = ["pingap", "health"]
description = "Health check handler for pingap"
[lib]
name = "pingap_health"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
humantime = { workspace = true }
http = { workspace = true }
pingora = { workspace = true }
snafu = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
tonic = "0.13.1"
tonic-health = "0.13.1"
url = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
tempfile = "3.16.0"
tokio-test = "0.4.4"
