[package]
name = "pingap-http-extra"
version = "0.9.10"
edition = "2021"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/pingap"
repository = "https://github.com/vicanso/pingap"
keywords = ["pingap", "http", "extra"]

[lib]
name = "pingap_http_extra"
path = "src/lib.rs"

[dependencies]
bytes = { workspace = true }
http = { workspace = true }
pingora = { workspace = true }
snafu = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }

pingap-util = { path = "../pingap-util" }

[dev-dependencies]
pretty_assertions = "1.4.0"
tokio-test = "0.4.4"
nanoid = "0.4.0"
