[package]
name = "pingap-imageoptim"
version = "0.12.0"
edition = "2021"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/pingap"
repository = "https://github.com/vicanso/pingap"
keywords = ["pingap", "imageoptim"]
description = "ImageOptim for pingap"


[lib]
name = "pingap_imageoptim"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
bytemuck = "1.23.2"
bytes = { workspace = true }
ctor = { workspace = true }
http = { workspace = true }
image = { version = "0.25.6", features = ["webp", "avif"] }
imagequant = { version = "4.4.1", default-features = false }
lodepng = "3.12.1"
mozjpeg = "0.10.13"
pingap-config = { version = "0.12.0", path = "../pingap-config" }
pingap-core = { version = "0.12.0", path = "../pingap-core" }
pingap-plugin = { version = "0.12.0", path = "../pingap-plugin" }
pingora = { workspace = true }
rgb = { version = "0.8.52", features = ["bytemuck"] }
snafu = { workspace = true }
tracing = { workspace = true }
