[package]
name = "pingap-location"
version = "0.10.6"
edition = "2021"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/pingap"
repository = "https://github.com/vicanso/pingap"
keywords = ["pingap", "location"]

[lib]
name = "pingap_location"
path = "src/lib.rs"

[dependencies]
ahash = { workspace = true }
arc-swap = { workspace = true }
once_cell = { workspace = true }
pingora = { workspace = true }
regex = { workspace = true }
snafu = { workspace = true }
substring = { workspace = true }
tracing = { workspace = true }
http = { workspace = true }
tokio = { workspace = true }
pingap-config = { version = "0.10.6", path = "../pingap-config" }
pingap-core = { version = "0.10.6", path = "../pingap-core" }

[dev-dependencies]
pretty_assertions = "1.4.0"
tokio-test = "0.4.4"
bytesize = { workspace = true }
