[package]
name = "pingap-location"
version = "0.12.0"
edition = "2021"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/pingap"
repository = "https://github.com/vicanso/pingap"
keywords = ["pingap", "location"]
description = "Reverse proxy location for pingap"
[lib]
name = "pingap_location"
path = "src/lib.rs"

[dependencies]
ahash = { workspace = true }
arc-swap = { workspace = true }
http = { workspace = true }
once_cell = { workspace = true }
pingap-config = { version = "0.12.0", path = "../pingap-config" }
pingap-core = { version = "0.12.0", path = "../pingap-core" }
pingora = { workspace = true }
regex = { workspace = true }
snafu = { workspace = true }
substring = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
tokio-test = "0.4.4"
bytesize = { workspace = true }
