[package]
name = "pingap-logger"
version = "0.11.0"
edition = "2021"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/pingap"
repository = "https://github.com/vicanso/pingap"
keywords = ["pingap", "logger"]
description = "Logger for pingap"

[dependencies]
bytesize = { workspace = true }
chrono = { workspace = true }
flate2 = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
time = { workspace = true }
bytes = { workspace = true }
pingora = { workspace = true }
regex = { workspace = true }
substring = { workspace = true }
itoa = { workspace = true }
tokio = { workspace = true }
http = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = [
    "local-time",
    "json",
    "fmt",
    "ansi",
], default-features = false }
tracing-appender = "0.2.3"
zstd = "0.13.3"
pingap-util = { version = "0.11.0", path = "../pingap-util" }
pingap-core = { version = "0.11.0", path = "../pingap-core" }

[target.'cfg(unix)'.dependencies]
syslog = "7.0.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
tokio-test = "0.4.4"
