[package]
name = "pingap-performance"
version = "0.12.0"
edition = "2021"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/pingap"
repository = "https://github.com/vicanso/pingap"
keywords = ["pingap", "performance"]
description = "Performance metrics for pingap"


[lib]
name = "pingap_performance"
path = "src/lib.rs"

[features]
tracing = ["prometheus"]

[dependencies]
async-trait = { workspace = true }
bytesize = { workspace = true }
cfg-if = { workspace = true }
humantime = { workspace = true }
http = { workspace = true }
memory-stats = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
pingap-cache = { version = "0.12.0", path = "../pingap-cache" }
pingap-config = { version = "0.12.0", path = "../pingap-config" }
pingap-core = { version = "0.12.0", path = "../pingap-core" }
pingap-location = { version = "0.12.0", path = "../pingap-location" }
pingap-upstream = { version = "0.12.0", path = "../pingap-upstream" }
pingora = { workspace = true }
prometheus = { version = "0.13.4", default-features = false, optional = true }
reqwest = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
snafu = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.17.0", default-features = false }


[dev-dependencies]
pretty_assertions = "1.4.1"
tokio-test = "0.4.4"
