[package]
name = "pingap-plugin"
version = "0.11.0"
edition = "2021"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/pingap"
repository = "https://github.com/vicanso/pingap"
keywords = ["pingap", "plugin"]


[lib]
name = "pingap_plugin"
path = "src/lib.rs"

[dependencies]
smallvec = "1.13.2"
dashmap = "6.1.0"
ctor = "0.2.9"
sha2 = { version = "0.10.8", default-features = false }
hmac-sha256 = "1.1.8"
hmac-sha512 = { version = "1.1.6", default-features = false }
uuid = { version = "1.12.1", features = [
    "v7",
    "std",
    "fast-rng",
], default-features = false }
bstr = "1.11.3"
fancy-regex = "0.14.0"
url = { workspace = true }
urlencoding = { workspace = true }
bytesize = { workspace = true }
glob = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
humantime = { workspace = true }
pingora = { workspace = true }
snafu = { workspace = true }
ahash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
cookie = { workspace = true }
substring = { workspace = true }
mime_guess = { workspace = true }
nanoid = { workspace = true }
regex = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
crc32fast = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
http = { workspace = true }
pingap-config = { version = "0.11.0", path = "../pingap-config" }
pingap-util = { version = "0.11.0", path = "../pingap-util" }
pingap-cache = { version = "0.11.0", path = "../pingap-cache" }
pingap-core = { version = "0.11.0", path = "../pingap-core" }


[dev-dependencies]
pretty_assertions = "1.4.0"
tokio-test = "0.4.4"
