[package]
name = "pingap-plugin"
version = "0.11.0"
edition = "2021"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/pingap"
repository = "https://github.com/vicanso/pingap"
keywords = ["pingap", "plugin"]
description = "Plugin for pingap"


[lib]
name = "pingap_plugin"
path = "src/lib.rs"

[dependencies]
ahash = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bstr = "1.11.3"
bytes = { workspace = true }
bytesize = { workspace = true }
chrono = { workspace = true }
cookie = { workspace = true }
ctor = { workspace = true }
crc32fast = { workspace = true }
dashmap = "6.1.0"
fancy-regex = "0.14.0"
glob = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
hmac-sha256 = "1.1.12"
hmac-sha512 = { version = "1.1.7", default-features = false }
humantime = { workspace = true }
mime_guess = { workspace = true }
nanoid = { workspace = true }
once_cell = { workspace = true }
pingap-cache = { version = "0.11.0", path = "../pingap-cache" }
pingap-config = { version = "0.11.0", path = "../pingap-config" }
pingap-core = { version = "0.11.0", path = "../pingap-core" }
pingap-util = { version = "0.11.0", path = "../pingap-util" }
pingora = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { version = "0.10.8", default-features = false }
smallvec = "1.13.2"
snafu = { workspace = true }
substring = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }


[dev-dependencies]
pretty_assertions = "1.4.0"
tokio-test = "0.4.4"
