[package]
name = "pingap-plugin"
version = "0.12.0"
edition = "2024"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/pingap"
repository = "https://github.com/vicanso/pingap"
keywords = ["pingap", "plugin"]
description = "Plugin for pingap"


[lib]
name = "pingap_plugin"
path = "src/lib.rs"

[dependencies]
ahash = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bstr = { workspace = true }
bytes = { workspace = true }
bytesize = { workspace = true }
chrono = { workspace = true }
cookie = { workspace = true }
ctor = { workspace = true }
crc32fast = { workspace = true }
dashmap = { workspace = true }
fancy-regex = { workspace = true }
glob = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
hmac-sha256 = { workspace = true }
hmac-sha512 = { workspace = true, default-features = false }
humantime = { workspace = true }
mime_guess = { workspace = true }
nanoid = { workspace = true }
path-absolutize = { workspace = true }
pingap-cache = { version = "0.12.0", path = "../pingap-cache" }
pingap-config = { version = "0.12.0", path = "../pingap-config" }
pingap-core = { version = "0.12.0", path = "../pingap-core" }
pingap-util = { version = "0.12.0", path = "../pingap-util" }
pingora = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
smallvec = { workspace = true }
snafu = { workspace = true }
substring = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }


[dev-dependencies]
pretty_assertions = "1.4.1"
tokio-test = "0.4.4"

[lints.clippy]
# Set the unwrap_used lint level to deny
unwrap_used = "deny"
