[package]
name = "pingap-sentry"
version = "0.12.0"
edition = "2021"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/pingap"
repository = "https://github.com/vicanso/pingap"
keywords = ["pingap", "sentry"]
description = "Sentry for pingap"

[lib]
name = "pingap_sentry"
path = "src/lib.rs"

[dependencies]
sentry-core = { workspace = true }
