[package]
name = "pingap-service"
version = "0.9.10"
edition = "2021"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/pingap"
repository = "https://github.com/vicanso/pingap"
keywords = ["pingap", "service"]

[lib]
name = "pingap_service"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
pingora = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
humantime = { workspace = true }
