[package]
name = "pingap-upstream"
version = "0.9.10"
edition = "2021"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/pingap"
repository = "https://github.com/vicanso/pingap"
keywords = ["pingap", "config"]

[lib]
name = "pingap_upstream"
path = "src/lib.rs"

[dependencies]
pingora = { workspace = true }
ahash = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
derive_more = { workspace = true }
futures-util = { workspace = true }
once_cell = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }
bytesize = { workspace = true }
tokio = { workspace = true }
pingora-runtime = { workspace = true }
futures = { workspace = true }
pingap-config = { path = "../pingap-config" }
pingap-discovery = { path = "../pingap-discovery" }
pingap-health = { path = "../pingap-health" }
pingap-service = { path = "../pingap-service" }
pingap-util = { path = "../pingap-util" }


[dev-dependencies]
pretty_assertions = "1.4.0"
tokio-test = "0.4.4"
