[package]
name = "pingap-util"
version = "0.12.0"
edition = "2021"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/pingap"
repository = "https://github.com/vicanso/pingap"
keywords = ["pingap", "util"]
description = "Util for pingap"


[lib]
name = "pingap_util"
path = "src/lib.rs"


[dependencies]
aes-gcm-siv = { version = "0.11.1", default-features = false, features = [
    "aes",
    "alloc",
] }
ahash = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
ipnet = "2.11.0"
once_cell = { workspace = true }
path-absolutize = { workspace = true }
pem = "3.0.5"
rustc_version_runtime = "0.3.0"
snafu = { workspace = true }
substring = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.21.0"
tokio-test = "0.4.4"
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
