[package]
name = "pingap-util"
version = "0.12.0"
edition = "2024"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/pingap"
repository = "https://github.com/vicanso/pingap"
keywords = ["pingap", "util"]
description = "Util for pingap"


[lib]
name = "pingap_util"
path = "src/lib.rs"


[dependencies]
aes-gcm-siv = { workspace = true }
ahash = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
ipnet = { workspace = true }
path-absolutize = { workspace = true }
pem = { workspace = true }
rustc_version_runtime = { workspace = true }
snafu = { workspace = true }
substring = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.21.0"
tokio-test = "0.4.4"
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false

[lints.clippy]
# Set the unwrap_used lint level to deny
unwrap_used = "deny"
