[package]
name = "pingap-webhook"
version = "0.12.0"
edition = "2021"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/pingap"
repository = "https://github.com/vicanso/pingap"
keywords = ["pingap", "webhook"]
description = "Webhook for pingap"


[dependencies]
async-trait = { workspace = true }
local-ip-address = "0.6.3"
pingap-core = { version = "0.12.0", path = "../pingap-core" }
reqwest = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
